[project]
name = "pyiceberg-file-registration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyiceberg",
    "s3fs",
    "sqlalchemy",
    "psycopg2-binary",
    "pyarrow",
    "polars"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
